--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=${PORT:8080}
-spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/capstone-database}
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/Mastermind-Stage}
 #jwt.secret=${JWT_SECRET:my-secret}
 #spring.mvc.pathmatch.matching-strategy=ant_path_matcher
