--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Front- & Backend",
-  "name": "Demo project to deploy front- and backend together",
+  "name": "Mastermind the game",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
