--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=${PORT:8080}
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/Mastermind-Stage}
 app.jwt.secret=${JWT_SECRET:my-secret}
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mongodb.embedded.version=3.0.0
